<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PokeBattler</string>
    <string name="title_play">Play</string>
    <string name="title_scores">Highscores</string>
    <string name="title_pokedex">PokeDex</string>
    <string name="title_setting">Settings</string>
    <string name="title_train">Train</string>
    <string name="welcome_text">Welcome to PokeBattler, let\'s test your skills!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Welcome_message">Great to see you here. I\'m really curious how good your PokeSkills are. Let\'s find it out. Login or Register to get started</string>
    <string name="error_empty_fields">You need to enter both fields!</string>
    <string name="wrongInput">Something is wrong, check your password if it\'s long enough. Or maybe it\'s your email. Try again</string>
    <string name="loginFailed">You forgot your secret password or I don\'t know you!</string>
    <string name="PersonalInfo">It\'s time to discuss some juicy details</string>
    <string name="meet">Let\'s meet</string>
    <string name="click_here_to_start">Click here to Start</string>
    <string name="IntroText">Try the pokedex or play a game, I hope you like it</string>
    <string name="loading">Loading</string>
    <string name="_2x">2x</string>
    <string name="_0_points">0 points</string>
    <string name="total_0">Total: 0</string>
    <string name="correct_0">Correct: 0</string>
    <string name="shows_the_type_of_a_pokemon">Shows the type of a pokemon</string>
    <string name="shows_an_image_of_a_pokemono">Shows an image of a pokemon</string>
    <string name="login">Login</string>
    <string name="pokebattler">PokeBattler</string>
    <string name="log_in">Log in</string>
    <string name="log_in_to_get_started_i_m_so_excited_that_you_re_back_who_are_you_again">Log in to get started. I\'m so excited that you\'re back. Who are you again?</string>
    <string name="Continue" >Continue</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="i_would_love_to_know_you_tell_me_something_about_yourself_but_first_let_s_get_the_formal_knowabouts_out_of_the_way">I would love to know you, tell me something about yourself! But first let\'s get the formal knowabouts out of the way:</string>
    <string name="email_adress">Email adress</string>
    <string name="press_the_back_button_to_leave">Press the back button to leave</string>
    <string name="confirm_password">Confirm password</string>
    <string name="image_of_someone_s_favorite_pokemon">Image of someone\'s favorite pokemon</string>
    <string name="how_should_i_call_you">How should i call you?</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="with_a_long_press_on_a_pokemon_in_your_pokedex_will_make_him_your_favorite_buddy">With a long press on a Pokemon in your PokeDex, will make him your favorite buddy</string>
    <string name="what_s_your_favorite_gen">What\'s your favorite Gen?</string>
    <string name="it_s_a_tip">It\'s a tip</string>
    <string name="show_information">Show information</string>
    <string name="_6">6</string>
    <string name="charizard">Charizard</string>
    <string name="_18_55">18.55</string>
    <string name="WhosGonnaWin">Who\'s gonna win this battle?</string>
    <string name="Rematch">Wanna play again? Click me</string>
    <string name="TotalBattle">Total:</string>
    <string name="_point">points</string>
    <string name="Correct_">Correct:</string>
    <string name="newHighScore">You got a new highscore, good job</string>
    <string name="LeaveWarning">Press back again to leave the application</string>
    <string name="noInternet">You don\'t have an internet connection</string>

</resources>
